@@ -327,7 +327,6 @@ Enter a URL to capture a file from: <epc:pin name="url"/><br/>
     <epp:phrase id="lib/submissionform:fix_probs">Before you deposit this entry into the repository, the following problems need to be corrected:</epp:phrase>
     <epp:phrase id="lib/submissionform:please_verify"><p><strong>You have not finished yet!</strong></p><p>Please verify that all of the details about your deposit are correct, and that all necessary files have been correctly uploaded including any figures.</p><p>When you are satisfied click the <strong>Deposit Item Now</strong> button at the foot of this page.</p></epp:phrase>
     <epp:phrase id="lib/submissionform:thanks"><p>Thank you.</p><p>Your submission will now be held for review. Provided there are no problems it should appear in the repository within the next few days.</p><p><a href="{$config{userhome}}">Click here to go to the user page</a></p></epp:phrase>
-    <epp:phrase id="lib/submissionform:sure_delete"><p>Are you absolutely sure you want to delete this item? <epc:pin name="title"/></p></epp:phrase>
     <epp:phrase id="lib/submissionform:filled_wrong">The form doesn't seem to be filled out correctly:</epp:phrase>
     <epp:phrase id="lib/submissionform:please_complete">Please complete the form before continuing.</epp:phrase>
     <epp:phrase id="lib/submissionform:filename">Filename</epp:phrase>
@@ -994,6 +993,13 @@ Titles and Help for the System Fields
     <epp:phrase id="Plugin/Screen/User/Edit:prev">Previous</epp:phrase>
     <epp:phrase id="Plugin/Screen/User/Edit:save">Save</epp:phrase>
     <epp:phrase id="Plugin/Screen/User/Edit:stop">Cancel</epp:phrase>
+    
+    <epp:phrase id="Plugin/Screen/User/Remove:title">Delete user</epp:phrase>
+    <epp:phrase id="Plugin/Screen/User/Remove:description">Remove this user from the system forever.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/User/Remove:user_removed">User successfully deleted</epp:phrase>
+    <epp:phrase id="Plugin/Screen/User/Remove:user_not_removed">User could not be deleted.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/User/Remove:sure_delete"><p>Are you absolutely sure you want to delete this user? <epc:pin name="title"/></p></epp:phrase>
+    
     <epp:phrase id="Plugin/Screen/User/Staff/Edit:title">Administer Account</epp:phrase>
     <epp:phrase id="Plugin/Screen/User/Staff/Edit:description">Modify this Account (including changing username and user type)</epp:phrase>
     <epp:phrase id="Plugin/Screen/User/Staff/Edit:next">Next</epp:phrase>
@@ -1068,6 +1074,8 @@ Titles and Help for the System Fields
     <epp:phrase id="Plugin/Screen/EPrint/Remove:title">Destroy item</epp:phrase>
     <epp:phrase id="Plugin/Screen/EPrint/Remove:description">Remove this item from the system forever.</epp:phrase>
     <epp:phrase id="Plugin/Screen/EPrint/Remove:item_removed">Item successfully removed</epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/Remove:sure_delete"><p>Are you absolutely sure you want to delete this item? <epc:pin name="title"/></p></epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/Remove:item_not_removed">Item could not be removed.</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/EPrint/Edit:title">Edit item</epp:phrase>
     <epp:phrase id="Plugin/Screen/EPrint/Edit:description">Edit item</epp:phrase>
